Use multi-stage build
- Update JVM startup settings to work w/ Java 17